tvec = executable('vec', 'vec.cpp', dependencies: nytl_dep)
test('vec', tvec)

tdynVec = executable('dynVec', 'dynVec.cpp', dependencies: nytl_dep)
test('dynVec', tdynVec)

# executable('mat',  'mat.cpp')
# test(mat mat)
#
# executable(typemap typemap.cpp)
# test(typemap typemap)
#
# executable(referenced referenced.cpp)
# test(referenced referenced)
#
# executable(callback callback.cpp)
# test(callback callback)
#
# executable(clone clone.cpp)
# test(clone clone)
#
# executable(observe observe.cpp)
# test(observe observe)
#
# executable(span span.cpp)
# test(span span)
#
# executable(rect rect.cpp)
# test(rect rect)
#
# executable(connection connection.cpp)
# test(connection connection)
#
# executable(approx approx.cpp)
# test(approx approx)
#
# executable(utf utf.cpp)
# test(utf utf)
#
# executable(flags flags.cpp)
# test(flags flags)
#
# executable(convert convert.cpp)
# test(convert convert)
#
# # compile-time tests only
# executable(nonCopyable nonCopyable.cpp)
# executable(tmp tmp.cpp)
# executable(functionTraits functionTraits.cpp)
